Fixing slider thumb alignment issue on Webkit browsers.

--- a/static/main.css
+++ b/static/main.css
@@ -488,7 +488,7 @@ input[type=range]::-webkit-slider-thumb {
     height:16px;
     width:8px;
     -webkit-appearance:none;
-    margin:-6px;
+    margin-top:-6px;
 }
 
 input[type=range]::-moz-range-thumb {
